graalvm example