@@ -1,4 +1,9 @@
-FROM adoptopenjdk/openjdk11-openj9:jdk-11.0.1.13-alpine-slim
-COPY build/libs/*.jar complet.jar
+FROM oracle/graalvm-ce:1.0.0-rc16 as graalvm
+COPY . /home/app/micronaut-graal-app
+WORKDIR /home/app/micronaut-graal-app
+RUN native-image --no-server -cp build/libs/complet-*.jar
+
+FROM frolvlad/alpine-glibc
 EXPOSE 8080
-CMD java  -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Dcom.sun.management.jmxremote -noverify ${JAVA_OPTS} -jar complet.jar
+COPY --from=graalvm /home/app/micronaut-graal-app/micronaut-graal-app .
+ENTRYPOINT ["./micronaut-graal-app"]
